--- a/test/fixtures/expenses.yml
+++ b/test/fixtures/expenses.yml
@@ -11,7 +11,7 @@ one:
   arrival: MyString
   distance: 1
   return_trip: false
-  veichle_category: one
+  vehicle_category: one
   brand: MyString
   model: MyString
   fuel: one
@@ -32,7 +32,7 @@ two:
   arrival: MyString
   distance: 1
   return_trip: false
-  veichle_category: two
+  vehicle_category: two
   brand: MyString
   model: MyString
   fuel: two
